# Infra-Archaeology-MCP

./: .gitignore  CLAUDE.md  CONVENTIONS.md  PROGRESS.md  README.md  config.json  pyproject.toml
src/infra_archaeology/: server.py
src/infra_archaeology/aws/: cloudtrail.py
src/infra_archaeology_mcp/: __init__.py  server.py
src/infra_archaeology_mcp/aws/: cloudtrail.py
src/infra_archaeology_mcp/terraform/: __init__.py  state_parser.py
src/infra_archaeology_mcp/tools/: creator_lookup.py  orphan_detector.py  terraform_lookup.py
tests/terraform/: test_state_parser.py
tests/tools/: test_creator_lookup_manual.py  test_orphan_detector.py  test_terraform_lookup.py
